@@ -1,5 +1,6 @@
 - added ability to create bookmarks (Olivier Sannier)
 - improved status icons (Olivier Sannier)
+- more robust parsing of catalog headers
 - added more translations:
      Galician (Leandro Regueiro)
 
